added home templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,41 @@
 
     {% block extra_js %}
     {% endblock %}
-    
-        <title>Titik</title>
+
+        <title>Titik {% block extratitle %} {% endblock %}</title>
     </head>
     <body>
-        <h1>Titik, your Face in Dots</h1>
-    </body>
-    </html>
+         <header class="container-fluid fixed-top"></header>
+            
+   {% if messages %}
+        <div class="message-container">
+            {% for message in messages %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toasts/toast_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toasts/toast_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toasts/toast_success.html' %}
+                    {% else %}
+                        {% include 'includes/toasts/toast_info.html' %}
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    {% block page_header %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
+    {% endblock %}
+
+</body>
+</html>
