added products and categories

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,6 +107,9 @@
             <div class="col bg-dark txt-white">
                 <h4 class="logo-font my-1">Free delivery on orders over €{{ free_delivery_theshold }}!</h4>
             </div>
+            <div class="col bg-danger txt-white">
+                <h4 class="logo-font my-1">Due to circumstances delevery might take a bit londer than expected</h4>
+            </div>
         </div>
     </header>
             
