--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -26,7 +26,7 @@
 
         <li class="nav-item dropdown bg-dark">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="objects-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+                Objects
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="objects-link">
                 <a href="{% url 'products' %}?category=mugs" class="dropdown-item">Mugs</a>
@@ -37,7 +37,7 @@
         </li>
         <li class="nav-item dropdown bg-dark">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+                Specials
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
                 <a href="{% url 'products' %}?category=holidays" class="dropdown-item">Holidays</a>
