--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-5">Shop now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-5">Shop now</a>
                     </h4>
                 </div>
             </div>
