--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="">
+                <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <input class="form-control border border-dark rounded-0" type="text" name="q" placeholder="Search">
                         <div class="input-group-append">
@@ -115,7 +115,7 @@
             
    {% if messages %}
         <div class="message-container">
-           <!-- {% for message in messages %}
+           {% for message in messages %}
                 {% with message.level as level %}
                     {% if level == 40 %}
                         {% include 'includes/toasts/toast_error.html' %}
@@ -127,7 +127,7 @@
                         {% include 'includes/toasts/toast_info.html' %}
                     {% endif %}
                 {% endwith %}
-            {% endfor %} --> 
+            {% endfor %}
         </div> 
     {% endif %}
 
