--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -13,139 +13,99 @@
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col text-center mt-3">
-                <h2 class="logo-font">Products</h2>
-                {% for c in cuurent_categories %}                
-                    <a href="{% url 'products' %}? category={{ c.name }}" class="category-badge text-decoration-none">
-                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                <div class="image-container my-5">
+                    {% if product.image %}
+                    <a href="{{ product.image }}" target="_blank">
+                        <img class="card-img-top img-fluid" src="{{ product.image }}" alt="{{ product.name }}">
                     </a>
-                {% endfor %}
-                <hr class="w-50 mb-1">
+                    {% else %}
+                    <a href="">
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                    </a>
+                    {% endif %}
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="product-container col-10 offset-1">
-                <div class="row mt-1 mb-2"></div>
-                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
-                        <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sortting != 'None_None' %}info{% else %}black{% endif %}">
-                                <option value="reset" {% if current_sortting == 'None_None' %}selected{% endif %}> Sort by ...</option>
-                                <option value="price_asc" {% if current_sortting == 'price_asc' %}selected{% endif %}> Price (low to high)</option>
-                                <option value="price_desc" {% if current_sortting == 'price_desc' %}selected{% endif %}> Price (high to low)</option>
-                                <option value="rating_asc" {% if current_sortting == 'rating_asc' %}selected{% endif %}> Rating (low to high)</option>
-                                <option value="rating_desc" {% if current_sortting == 'rating_desc' %}selected{% endif %}> Rating (high to low)</option>
-                                <option value="name_asc" {% if current_sortting == 'name_asc' %}selected{% endif %}> Name (A - Z)</option>
-                                <option value="name_asc" {% if current_sortting == 'name_asc' %}selected{% endif %}> Name (A - Z)</option>
-                                <option value="category_asc" {% if current_sortting == 'category_asc' %}selected{% endif %}> Category (A - Z)</option>
-                                <option value="category_asc" {% if current_sortting == 'category_asc' %}selected{% endif %}> Category (A - Z)</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left">
-                            {% if search_term or current_categories != 'None_None' %}
-                                <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
-                            {% endif %}
-                            {{ products|length }} Products{% if search_term %} found for <strong> "{{ search_term }}"</strong>{% endif %}
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="product-details-container mb-5 mt-md-5">
+                        <p class="mb-0">{{ product.name }}</p>
+                        <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                        {% if product.category %}
+                        <p class="small mt-1 mb-0">
+                            <a href="{% url 'products' %}?category={{ products.category.name }}" class="text-muted">
+                                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                            </a>
                         </p>
-                    </div>
-                <div class="row">
-                    {% for product in products %}
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card h-100 border-0">
-                                {% if product.image %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                </a>
-                                {% else %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                </a>
-                                {% endif %}
-                                <div class="card-body pb-0">
-                                    <p class="mb-0">{{ product.name }}</p>
-                                </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
-                                    <div class="row">
-                                        <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                                            {% if product.category %}
-                                            <p class="small mt-1 mb-0">
-                                                <a href="{% url 'products' %}?category={{ products.category.name }}" class="text-muted">
-                                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                                </a>
-                                            </p>
-                                            {% endif %}
-                                            {% if product.rating %}
-                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                                            {% else %}
-                                                <small class="text-muted">No Rating</small>
-                                            {% endif %}
-                                        </div>
+                        {% endif %}
+                        {% if product.rating %}
+                            <small class="text-muted"> <i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                        {% else %}
+                            <small class="text-muted">No Rating</small>
+                        {% endif %}
+                        <p class="mt-3">{{ product.description }}</p>
+                         <!-- form below is quantity button and keep shopping button-->
+                        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                            {% csrf_token %}
+                            <div class="form_row">
+                                {% with product.has_sizes as s %}
+                                {% if s %}
+                                    <div class="col-12">
+                                        <p><strong>Size:</strong></p>
+                                        <select name="product_size" id="id_product_size" class="form-control rounded-0 w-50">
+                                            <option value="xs">XS</option>
+                                            <option value="s">S</option>
+                                            <option value="m" selected>M</option>
+                                            <option value="l">L</option>
+                                            <option value="xl">XL</option>
+                                        </select>
                                     </div>
+                                {% endif %}
+                                
+                                <div class="col-12">
+                                    <p class="mt-3"><strong>Quantity</strong></p>
+                                    <div class="form-group w-50">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-minus"></i>
+                                                    </span> 
+                                                </button>
+                                            </div>
+                                             <input type="number" class="form-control qty_input" name="quantity" 
+                                                value="1" min="1" max="99" data-item_id="{{ product_id }}" 
+                                                id="id_qty_{{ product_id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div> 
                                 </div>
+                                <div class="col{% if s %}-12 mt-2{% endif %}">
+                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-3">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep shopping</span>
+                                    </a>
+                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag"> 
+                                </div>
+                                 <!-- redirect button to send customers back to shop-->
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                {% endwith %}
                             </div>
-                        </div>
-                        {% if forloop.counter|divisibleby:1 %}
-                            <div class="col-12 d-sm-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}                        
-                        {% if forloop.counter|divisibleby:2 %}
-                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:3 %}
-                            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:4 %}
-                            <div class="col-12 d-none d-xl-block mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
+                        </form>
+                    </div>                   
                 </div>
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
-        <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-        </a>
-    </div>
 {% endblock %}
-
 {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript">
-        $('.btt-link').click(function(e){
-            window.scrollTo(0,0)
-        })
-    </script>
-
-    <script type="text/javascript">
-        $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
-
-            var selectedVal = selector.val();
-            if(selectedVal != "reset") {
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1]
-
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
-
-                window.location.replace(currentUrl);
-            }
-        })    
-    </script> 
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
