--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,9 +15,9 @@
         <div class="row">
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Products</h2>
-                {% for c in cuurent_categories %}                
+                {% for c in current_categories %}                
                     <a href="{% url 'products' %}? category={{ c.name }}" class="category-badge text-decoration-none">
-                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+                        <span class="p-2 mt-2 badge badge-white bg-dark text-white rounded-0 border border-dark">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
                 <hr class="w-50 mb-1">
@@ -28,16 +28,16 @@
                 <div class="row mt-1 mb-2"></div>
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sortting != 'None_None' %}info{% else %}black{% endif %}">
-                                <option value="reset" {% if current_sortting == 'None_None' %}selected{% endif %}> Sort by ...</option>
-                                <option value="price_asc" {% if current_sortting == 'price_asc' %}selected{% endif %}> Price (low to high)</option>
-                                <option value="price_desc" {% if current_sortting == 'price_desc' %}selected{% endif %}> Price (high to low)</option>
-                                <option value="rating_asc" {% if current_sortting == 'rating_asc' %}selected{% endif %}> Rating (low to high)</option>
-                                <option value="rating_desc" {% if current_sortting == 'rating_desc' %}selected{% endif %}> Rating (high to low)</option>
-                                <option value="name_asc" {% if current_sortting == 'name_asc' %}selected{% endif %}> Name (A - Z)</option>
-                                <option value="name_asc" {% if current_sortting == 'name_asc' %}selected{% endif %}> Name (A - Z)</option>
-                                <option value="category_asc" {% if current_sortting == 'category_asc' %}selected{% endif %}> Category (A - Z)</option>
-                                <option value="category_asc" {% if current_sortting == 'category_asc' %}selected{% endif %}> Category (A - Z)</option>
+                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}> Sort by ...</option>
+                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}> Price (low to high)</option>
+                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}> Price (high to low)</option>
+                                <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}> Rating (low to high)</option>
+                                <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}> Rating (high to low)</option>
+                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}> Name (A - Z)</option>
+                                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}> Name (A - Z)</option>
+                                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}> Category (A - Z)</option>
+                                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}> Category (A - Z)</option>
                             </select>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                             {% if search_term or current_categories != 'None_None' %}
                                 <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
                             {% endif %}
-                            {{ products|length }} Products{% if search_term %} found for <strong> "{{ search_term }}"</strong>{% endif %}
+                            {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                         </p>
                     </div>
                 <div class="row">
@@ -65,7 +65,7 @@
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.name }}</p>
                                 </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="card-footer bg-dark pt-0 border-0 text-left text-white">
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
@@ -111,13 +111,14 @@
             </div>
         </div>
     </div>
+    <!-- Scroll to top button -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
-        <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        <a class="btn-link d-flex h-100">
+            <i class="fas fa-arrow-up text-white mx-auto my-auto bg-dark"></i>
         </a>
     </div>
 {% endblock %}
-
+<!-- Scroll to top js -->
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
