--- a/templates/base.html
+++ b/templates/base.html
@@ -85,6 +85,7 @@
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
+                                    <!-- displays grand total made possible by contexts.py -->
                                     {% if grand_total %}
                                         ${{ grand_total|floatformat:2 }}
                                     {% else %}
