--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% bag_tools %}
+{% load bag_tools %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -50,7 +50,7 @@
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">${{ item.product.price }}</p>
+                                        <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
                                     </td>
                                     <td class="py-3 w-25">
                                         <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
