--- a/static/css/base.css
+++ b/static/css/base.css
@@ -63,6 +63,10 @@ body {
     color: white;
 }
 
+.message-container {
+    position: fixed;
+    top: 72px;
+}
 
 /* -------------------------------- Media Queries */
 
