--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,6 +66,16 @@ body {
 .message-container {
     position: fixed;
     top: 72px;
+    right: 15px;
+    z-index: 99999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
 }
 
 /* -------------------------------- Media Queries */
