added Stripe Element!

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% load bag_tools %}
 
-{% block extracss %}
-    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css %}">
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -136,4 +136,5 @@
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret_key|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_element.js' %}"></script>
 {% endblock %}
