--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,3 +1,34 @@
+.StripeElement,
+.stripe-style-input {
+    box-sizing: border-box;
+    height: 40px;
+    padding: 10px 12px;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    background-color: 161c2d;
+    box-shadow: 0 1px 3px 0 #000;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus,
+.stripe-style-input:focus,
+.stripe-style-input:active {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+    border-color: red;
+}
+
+.StripeElement--webkit-autofill {
+    background-color: blue !important;
+}
+
+.stripe-style-input::placeholder {
+    color: grey;
+}
+
 .fieldset-label {
     position: relative;
     right: .5rem;
