--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,11 +1,11 @@
 <script type="text/javascript">
 //Disable +/- buttons outside of range 1-99
-    function handleEnableDisable(itemId) {
-        var currentValue = parseInt($('#id_qty_${itemId}').val());
+ function handleEnableDisable(itemId) {
+        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
         var minusDisabled = currentValue < 2;
         var plusDisabled = currentValue > 98;
-        $('#decrement-qty_${itemId}').prop('disabled', minusDisabled);
-        $('#increment-qty_${itemId}').prop('disabled', plusDisabled);
+        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
+        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
     }
 //ensure proper enableing/disabling of all inputs on load page
     var allQtyInputs = $('.qty_input');
