--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,8 +16,8 @@
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if product.image %}
-                    <a href="{{ product.image }}" target="_blank">
-                        <img class="card-img-top img-fluid" src="{{ product.image }}" alt="{{ product.name }}">
+                    <a href="{{ product.image.url }}" target="_blank">
+                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                     </a>
                     {% else %}
                     <a href="">
@@ -44,51 +44,53 @@
                         {% endif %}
                         <p class="mt-3">{{ product.description }}</p>
                          <!-- form below is quantity button and keep shopping button-->
-                        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                            {% csrf_token %}
-                            <div class="form_row">                           
-                                <div class="col-12">
-                                    <p class="mt-3"><strong>Quantity</strong></p>
-                                    <div class="form-group w-50">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                    <span class="icon">
-                                                        <i class="fas fa-minus"></i>
-                                                    </span> 
-                                                </button>
-                                            </div>
-                                             <input type="number" class="form-control qty_input" name="quantity" 
-                                                value="1" min="1" max="99" data-item_id="{{ product_id }}" 
-                                                id="id_qty_{{ product_id }}">
-                                            <div class="input-group-append">
-                                                <button class="increment-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                    <span class="icon">
-                                                        <i class="fas fa-plus"></i>
-                                                    </span>
-                                                </button>
-                                            </div>
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
                                         </div>
-                                    </div> 
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-black rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-12 mt-2">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-dark rounded-0 mt-3">
+                            </div>
+
+                            <div class="col{% if s %}-12 mt-2{% endif %}">
+                                <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
-                                    <span class="text-uppercase">Keep shopping</span>
-                                    </a>
-                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag"> 
-                                </div>
-                                 <!-- redirect button to send customers back to shop-->
-                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
-                        </form>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
                     </div>                   
                 </div>
             </div>
         </div>
-    </div>
 {% endblock %}
 {% block postloadjs %}
 {{ block.super }}
