--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -131,6 +131,14 @@
             </div>
         </div>
     </div>
+    <div id="loading-overlay">
+        <h1 class="text-light logo-front loading-spinner">
+            <span class="icon">
+                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+            </span>
+        </h1>
+    </div>
+
 {% endblock %}
 {% block postloadjs %}
     {{ block.super }}
