--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,12 +23,23 @@
                 <hr>
             </div>
         </div>
-
-
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Current Delivery Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Order History</p>
+                {{ orders }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
 {% block postloadjs %}
     {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret_key|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_element.js' %}"></script>
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js%}"></script> 
 {% endblock %}
