--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,14 +1,14 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
-
-<h1>{% trans "Sign In" %}</h1>
-
+{% block inner_content %}
+<hr>
+<h5 class="logo-font mb-4">{% trans "Sign In" %}</h5>
+<hr>
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
@@ -34,13 +34,16 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% endif %}
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+    {% csrf_token %}
+    {{ form|crispy }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <a href="{% url 'home' %}" class="btn btn-outline-black rounded-0">Home</a>
+    <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+    <p class="mt-2">
+        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    </p>
 </form>
 
 {% endblock %}
