--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,9 +4,10 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Out" %}</h1>
-
+{% block inner_content %}
+<hr>
+<h5 class="logo-font mb-4">{% trans "Sign Out" %}</h5>
+<hr>
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
