--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -4,12 +4,14 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-
+{% block inner_content %}
+<hr>
+<h5 class="logo-font mb-4">{% trans "Change Password" %}</h5>
+<hr>
+{% trans "Sign Out" %}
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit" name="action">{% trans "Change Password" %}</button>
         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </form>
