--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -4,8 +4,9 @@
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
-
+{% block inner_content %}
+<hr>
+<h5 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h5>
+<hr>
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
