Profile functionalities added, view order history, and conneted to Checkout

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,3 +1,9 @@
+.order-history {
+    max-height: 416px; /* profie height and submit button */
+    overflow-y: auto;
+}
+
+
 .profile-update-form .form-control {
     color: black;
 }
