debuged error in toast, $ = € second try

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -37,7 +37,7 @@
                     </p></strong>
                     {% if free_delivery_delta > 0 %}
                         <p class="mb-0 p-2 bg-warning shadow-sm text-white text-center">
-                            Spend <strong>${{ free_delivery_delta }}</strong>more to get free next day delivery!
+                            Spend <strong>€{{ free_delivery_delta }}</strong>more to get free next day delivery!
                         </p>
                     {% endif %}
                     <a href="{% url 'view_bag' %}" class="btn btn-dark btn-block rounded-0">
