--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,13 +12,13 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+            <div class="col-5 col-md-6 my-auto">
+                <h1 class="display-2 logo-font text-white">
                     New Tech Art! 
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-5">Shop now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-1">Shop now</a>
                     </h4>
                 </div>
             </div>
